styles media in more info

--- a/scss/components/_modtresipuntaudio.scss
+++ b/scss/components/_modtresipuntaudio.scss
@@ -1,5 +1,6 @@
 #page-mod-tresipuntaudio-view[data-theme='cbe'][data-role="user"] #region-main-box,
 #page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] #region-main-box .modulecbe.tresipuntaudio,
+#page-theme-cbe-view_moreinfo[data-theme='cbe'][data-role="user"] #region-main-box .modulecbe.tresipuntaudio,
 #page-course-view-topics[data-theme='cbe'][data-role="user"] .activity.tresipuntaudio  {
 
   #audiointro {
