section-0 in editing visible

--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -142,8 +142,13 @@ body[data-theme='cbe'][data-role='user'] {
     }
   }
 
-
-
-
-
+  &.editing {
+    .course-content {
+      .topics {
+        li#section-0 {
+          display: list-item !important;
+        }
+      }
+    }
+  }
 }
