--- a/scss/components/_coursecard.scss
+++ b/scss/components/_coursecard.scss
@@ -32,6 +32,10 @@ body[data-theme='cbe'][data-role="user"]  {
       width: 32px;
       height: 32px;
     }
+    .notification i {
+      color: #929292;
+      font-size: 27px;
+    }
     .students {
       span {
         font-size: 21px;
