--- a/templates/coursecard_footer.mustache
+++ b/templates/coursecard_footer.mustache
@@ -9,6 +9,11 @@
             <i class="fa fa-users" aria-hidden="true"></i><span>{{ students_num }}</span>
         </button>
     </div>
+    <div class="notification">
+        <a type="button" class="btn-tooltip" href="{{ notification_url }}" data-toggle="tooltip" data-placement="bottom" title="{{# str }} notifications, theme_cbe {{/ str }}">
+            <i class="fa fa-bell" aria-hidden="true"></i>
+        </a>
+    </div>
     <div class="user-role">
         <a href="{{ view_url }}" class="btn btn-secondary aula">{{# str }} view_course, theme_cbe {{/ str }}</a>
     </div>
