--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -21,11 +21,13 @@
 @import "pages/login";
 @import "pages/dashboard";
 @import "pages/course";
+@import "pages/user";
 @import "pages/module";
 @import "pages/board";
 @import "pages/themes";
 @import "pages/moreinfo";
 @import "pages/tasks";
+@import "pages/resources";
 @import "pages/vclasses";
 @import "pages/generic";
 @import "pages/modedit";
