--- a/templates/full_header.mustache
+++ b/templates/full_header.mustache
@@ -28,7 +28,7 @@
         "courseheader": "course_header_html"
     }
 }}
-<header id="page-header" class="row {{# in_course }}course{{/ in_course }}">
+<header id="page-header" class="row {{ nav_context }}">
     {{# is_board }}
     <div class="col-9 pt-3 pb-3">
         <div class="card header-board" style='background-image: url("{{{courseimage}}}");'>
@@ -110,6 +110,40 @@
             </div>
         </div>
     {{/ is_custom}}
+    {{# is_user }}
+        <div class="col-9 pt-3 pb-3">
+            <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
+                <div class="card-body {{^contextheader}}p-2{{/contextheader}}">
+                    <div class="d-sm-flex align-items-center">
+                        {{#contextheader}}
+                            <div class="mr-auto">
+                                {{{contextheader}}}
+                            </div>
+                        {{/contextheader}}
+
+                        {{#settingsmenu}}
+                            <div class="context-header-settings-menu">
+                                {{{settingsmenu}}}
+                            </div>
+                        {{/settingsmenu}}
+                        <div class="header-actions-container flex-shrink-0" data-region="header-actions-container">
+                            {{#headeractions}}
+                                <div class="header-action ml-2">{{{.}}}</div>
+                            {{/headeractions}}
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap">
+                        <div class="ml-auto d-flex">
+                            {{{pageheadingbutton}}}
+                        </div>
+                        <div id="course-header">
+                            {{{courseheader}}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{/ is_user}}
     {{# is_generic }}
         <div class="col-9 pt-3 pb-3">
             <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
