--- a/scss/components/_coursecard.scss
+++ b/scss/components/_coursecard.scss
@@ -1,6 +1,12 @@
 body[data-theme='cbe'][data-role="user"]  {
 
   .dashboard-card {
+    .action-visibles {
+      position: absolute;
+      bottom: 77px;
+      right: 8px;
+      color: grey;
+    }
     .teachers {
       position: absolute;
       top: 118px;
