--- a/templates/block_myoverview/main_original.mustache
+++ b/templates/block_myoverview/main_original.mustache
@@ -25,13 +25,17 @@
 
 <div id="block-myoverview-{{uniqid}}" class="block-myoverview block-cards" data-region="myoverview" role="navigation">
 
-    <div data-region="filter" class="d-flex align-items-center flex-wrap" aria-label="{{#str}} aria:controls, block_myoverview {{/str}}">
-        {{> block_myoverview/nav-grouping-selector }}
-        {{> block_myoverview/nav-sort-selector }}
-    </div>
+            <div data-region="filter" class="d-flex align-items-center flex-wrap" aria-label="{{#str}} aria:controls, block_myoverview {{/str}}">
+                {{> block_myoverview/nav-grouping-selector }}
+
+                {{> block_myoverview/nav-sort-selector }}
+                {{#displaydropdown}}
+                    {{> block_myoverview/nav-display-selector }}
+                {{/displaydropdown}}
+            </div>
 
     <div class="container-fluid p-0">
-        {{> theme_cbe/courses-view }}
+        {{> block_myoverview/courses-view }}
     </div>
 </div>
 {{#js}}
