--- a/templates/columns2/columns2_admin.mustache
+++ b/templates/columns2/columns2_admin.mustache
@@ -57,7 +57,7 @@
 
     {{{ output.standard_top_of_body_html }}}
 
-    {{> theme_cbe/navbar_admin }}
+    {{> theme_cbe/navbar/navbar_admin }}
     {{> theme_boost/nav-drawer }}
 
     <div id="page" class="container-fluid d-print-block">
