--- a/templates/columns2/columns2_course.mustache
+++ b/templates/columns2/columns2_course.mustache
@@ -57,7 +57,7 @@
 
         {{{ output.standard_top_of_body_html }}}
 
-        {{> theme_cbe/navbar }}
+        {{> theme_cbe/navbar/navbar }}
         {{> theme_boost/nav-drawer }}
 
         <div id="page" class="container-fluid d-print-block">
