--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -142,6 +142,19 @@ body[data-theme='cbe'] {
     }
   }
 
+  button#navbar-createcourse {
+    z-index: 50;
+    background-color: white;
+    color: $black-ligth;
+    border: 1px solid $black-ligth;
+    border-radius: 20px;
+    padding: 4px 8px 3px 9px;
+    margin-right: 20px;
+    &:hover {
+      background-color: $grey-medium2;
+    }
+  }
+
   [data-region=right-hand-drawer].drawer {
     top: $nav-height;
     height: calc(100% - 75px);
