--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -37,7 +37,7 @@
 <div id="page-wrapper">
 
     {{{ output.standard_top_of_body_html }}}
-    {{> theme_cbe/navbar_login }}
+    {{> theme_cbe/navbar/navbar_login }}
 
     <div id="page" class="container-fluid mt-0">
         <div id="page-content" class="row">
