--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -8,7 +8,7 @@
             {{ name }}
             </a>
         </div>
-        <div class="added">{{ added }}</div>
+        <div class="added">{{ sectionname }} - <span>{{ added }}</span></div>
     </div>
     <div class="action-mod">
         {{# is_teacher }}
