--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -110,7 +110,7 @@ body[data-theme='cbe'][data-role="user"] {
         }
       }
       .text {
-        margin: 25px 70px 20px 15px;
+        margin: 25px 130px 20px 15px;
         .name {
           font-family: $fontbold;
           font-size: 18px;
@@ -126,6 +126,9 @@ body[data-theme='cbe'][data-role="user"] {
           font-size: 16px;
           font-weight: 600;
           color: $grey-medium;
+          >span {
+            font-weight: 300;
+          }
         }
         .publication {
           margin-top: 20px;
