--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -21,6 +21,9 @@
 @import "pages/login";
 @import "pages/dashboard";
 @import "pages/course";
+@import "pages/category";
+@import "pages/system";
+@import "pages/index";
 @import "pages/user";
 @import "pages/module";
 @import "pages/board";
