--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,7 +7,7 @@ body[data-theme='cbe'][data-role='user'][data-context="index"] {
 
   #region-main {
     width: 100%;
-    #frontpage-category-names {
+    #frontpage-category-combo {
       >h2 {
         display: none;
       }
@@ -20,12 +20,23 @@ body[data-theme='cbe'][data-role='user'][data-context="index"] {
           background-position-x: 6px;
           a {
             color: $black-ligth;
+            font-weight: 600;
           }
           span.numberofcourse {
             position: relative;
             top: -3px;
             left: 4px;
           }
+        }
+        .coursebox>.info>.coursename a {
+          background-image: none;
+          font-size: 16px;
+          font-weight: 600;
+        }
+        .content {
+          padding-left: 16px;
+          display: flex;
+          flex-direction: column-reverse;
         }
       }
 
