--- a/scss/pages/_tasks.scss
+++ b/scss/pages/_tasks.scss
@@ -1,5 +1,26 @@
 body[data-theme='cbe'][data-role='user'] {
 
+  #page-header.course.custom {
+    .card.header {
+      background-position: center;
+      background-size: cover;
+      .degraded {
+        background: linear-gradient(180deg,rgba(0,0,0,0.8) 10%,rgba(0,0,0,0) 100%);
+        .card-body {
+          padding: 24px 24px 14px;
+        }
+        h1, h2 {
+          color: white;
+        }
+        .subtitle {
+          font-size: 23px;
+          color: white !important;
+          margin-bottom: 4px;
+        }
+      }
+    }
+  }
+
   div[data-region='tasks'] {
     main.contain {
       background-color: white;
