--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -1,25 +1,38 @@
 body[data-theme='cbe'][data-role='user'] {
 
-  #page-header.course {
-    .card-body {
-      padding: 20px 20px 0;
-      .page-header-headings {
-        h1 {
-          font-size: 44px;
-          font-weight: 600;
-          letter-spacing: 1px;
-        }
-        h2 {
-          font-size: 23px;
-          color: $grey-medium;
-          margin-bottom: 4px;
-        }
+  #page-header.course.themes {
+    .card.header {
+      background-position: center;
+      background-size: cover;
+      .degraded {
+        background: linear-gradient(180deg,rgba(0,0,0,0.8) 10%,rgba(0,0,0,0) 100%);
       }
-      .d-flex.flex-wrap {
-        height: 10px;
+      .card-body {
+        padding: 20px 20px 0;
+        .page-header-headings {
+          h1 {
+            font-size: 44px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            color: white;
+          }
+          h2 {
+            font-size: 23px;
+            color: white;
+            margin-bottom: 4px;
+          }
+        }
+        .d-flex.flex-wrap {
+          height: 10px;
+        }
       }
     }
+    a#action-menu-toggle-2 {
+      color: white;
+      text-shadow: 0 1px 0 #616161, 0 14px 10px rgb(0 0 0 / 15%), 0 6px 2px rgb(0 0 0 / 19%), 0 28px 25px rgb(0 0 0 / 10%);
+    }
   }
+
 
   .course-content {
     .topics {
