--- a/templates/header/themes.mustache
+++ b/templates/header/themes.mustache
@@ -43,6 +43,7 @@
                         {{#settingsmenu}}
                             <div class="context-header-settings-menu">
                                 {{{settingsmenu}}}
+                                <div class="tri triangle-config"></div>
                             </div>
                         {{/settingsmenu}}
                         <div class="header-actions-container flex-shrink-0" data-region="header-actions-container">
@@ -54,6 +55,7 @@
                     <div class="d-flex flex-wrap">
                         <div class="ml-auto d-flex">
                             {{{pageheadingbutton}}}
+                            <div class="tri triangle-edit"></div>
                         </div>
                         <div id="course-header">
                             {{{courseheader}}}
