--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -11,6 +11,7 @@
 @import "components/modtresipuntvideo";
 @import "components/modtresipuntaudio";
 @import "components/modulecbe";
+@import "components/table";
 
 @import "layout/navbar";
 @import "layout/footer";
@@ -29,6 +30,8 @@
 @import "pages/board";
 @import "pages/themes";
 @import "pages/moreinfo";
+@import "pages/copycourse";
+@import "pages/copycourse_progress";
 @import "pages/tasks";
 @import "pages/resources";
 @import "pages/vclasses";
