--- a/scss/layout/_editionmode.scss
+++ b/scss/layout/_editionmode.scss
@@ -1,21 +1,38 @@
 body[data-theme='cbe'][data-role='user'] {
 
   #page-header.row.course {
+    .card-body .tri {
+      width: 0;
+      height: 0;
+      border-top: 10px solid #861949;
+      border-right: 10px solid transparent;
+      position: absolute;
+      bottom: 54px;
+      right: -10px;
+      &.triangle-edit {
+        bottom: 59px;
+        right: -10px;
+      }
+      &.triangle-config {
+        bottom: 8px;
+        right: -10px;
+      }
+    }
     .singlebutton {
       button {
         visibility: hidden;
         &:before {
           visibility: visible;
-          content: "\f013";
+          content: "\f040";
           font: normal normal normal 14px/1 FontAwesome;
           background-color: $primary-color;
           border: none;
-          height: 54px;
-          width: 68px;
-          font-size: 37px;
+          height: 45px;
+          width: 60px;
+          font-size: 25px;
           position: absolute;
           right: -10px;
-          top: 20px;
+          top: 15px;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -32,7 +49,13 @@ body[data-theme='cbe'][data-role='user'] {
       input[name="edit"][value="off"] ~ button {
         &:before {
           background-color: $grey-medium;
-          content: "\f085";
+          content: "\f044";
+          font-size: 28px;
+        }
+        &:hover {
+          &:before {
+            background-color: #747474;
+          }
         }
       }
     }
