--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -48,34 +48,44 @@ body[data-theme='cbe'][data-role='user'] {
             }
           }
         }
-        .edition {
-          background-color: $primary-color;
-          height: 54px;
-          width: 68px;
+        .tool-tooltip {
           position: absolute;
           right: -10px;
-          top: 20px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 9px 0 0 10px;
-          cursor: pointer;
-          i {
-            color: white;
-            font-size: 37px;
+          top: 15px;
+          &.copy {
+            top: 65px;
+            .tool-link {
+              i {
+                font-size: 25px;
+              }
+            }
           }
-          .triangle {
-            width: 0;
-            height: 0;
-            border-top: 10px solid #861949;
-            border-right: 10px solid transparent;
-            position: absolute;
-            bottom: -10px;
-            right: 0;
-          }
-          &:hover, &:focus {
-            background-color: #e82373 !important;
-            text-decoration: none;
+          .tool-link {
+            background-color: $primary-color;
+            height: 45px;
+            width: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 9px 0 0 10px;
+            cursor: pointer;
+            i {
+              color: white;
+              font-size: 25px;
+            }
+            .triangle {
+              width: 0;
+              height: 0;
+              border-top: 10px solid #861949;
+              border-right: 10px solid transparent;
+              position: absolute;
+              bottom: -10px;
+              right: 0;
+            }
+            &:hover, &:focus {
+              background-color: #e82373 !important;
+              text-decoration: none;
+            }
           }
         }
       }
