--- a/templates/header/custom.mustache
+++ b/templates/header/custom.mustache
@@ -38,10 +38,12 @@
                         <h1 class="title">{{ coursename }}</h1>
                     </div>
                     {{# is_teacher }}
-                        <a class="edition" href="{{ edit_course }}">
-                            <i class="fa fa-cog" aria-hidden="true"></i>
-                            <div class="triangle"></div>
-                        </a>
+                        <div class="tool-tooltip edition" data-toggle="tooltip" data-placement="left" title="{{# str }} edit_course, theme_cbe {{/ str }}">
+                            <a class="tool-link" href="{{ edit_course }}">
+                                <i class="fa fa-wrench" aria-hidden="true"></i>
+                                <div class="triangle"></div>
+                            </a>
+                        </div>
                     {{/ is_teacher }}
                 </div>
             </div>
