--- a/scss/components/_modtresipuntvideo.scss
+++ b/scss/components/_modtresipuntvideo.scss
@@ -173,7 +173,7 @@
 #page-theme-cbe-view_board[data-theme='cbe'][data-role="user"],
 #page-theme-cbe-view_moreinfo[data-theme='cbe'][data-role="user"]   {
   .resourcecontent {
-    margin: 30px 200px !important;
+    margin: 15px 200px 40px !important;
   }
 }
 
