--- a/templates/sections/course_left_section_themes_navigation_component.mustache
+++ b/templates/sections/course_left_section_themes_navigation_component.mustache
@@ -9,7 +9,7 @@
     <ul class="themes">
         {{# themes }}
         <li class="theme {{# active }}active{{/ active }}">
-            <a href="{{ href }}">{{ name }}</a>
+            <a href="{{ href }}">{{# shortentext }} 90, {{ name }} {{/ shortentext }}</a>
         </li>
         {{/ themes }}
     </ul>
