--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -14,6 +14,7 @@
 @import "components/table";
 
 @import "layout/navbar";
+@import "layout/flatnav";
 @import "layout/footer";
 @import "layout/myoverview";
 @import "layout/editionmode";
