--- a/scss/pages/_course.scss
+++ b/scss/pages/_course.scss
@@ -119,18 +119,20 @@ body[data-theme='cbe'][data-role='user'] {
               ul.themes {
                 list-style: none;
                 margin: 10px 0;
+                padding: 0;
+                line-height: 23px;
                 li.theme {
-                  margin: 30px 0;
+                  margin: 25px 0;
                   cursor: pointer;
-                  font-size: 20px;
+                  font-size: 18px;
                   font-weight: 600;
                   &.active {
-                    font-size: 24px;
+                    font-size: 18px;
                     font-family: $fontbold;
                     border-left: 6px solid $primary-color;
-                    padding-left: 30px;
+                    padding-left: 16px;
                     position: relative;
-                    left: -36px;
+                    left: -21px;
                   }
                   a {
                     color: $black-ligth;
