--- a/templates/columns2/columns2.mustache
+++ b/templates/columns2/columns2.mustache
@@ -58,7 +58,7 @@
         {{{ output.standard_top_of_body_html }}}
 
         {{> theme_cbe/navbar/navbar }}
-        {{> theme_boost/nav-drawer }}
+        {{> theme_cbe/navbar/nav-drawer }}
 
         <div id="page" class="container-fluid d-print-block">
             {{{ output.full_header }}}
