--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -25,11 +25,11 @@
 <div class="module_media" data-region="media">
     {{# is_media }}
         <div class="media-block">
-            <div class="expand-media">
-                <button class="expand-media" data-cmid="{{ id }}" data-action="expand">
+            <div class="expand">
+                <button class="expand-media action-media" data-cmid="{{ id }}" data-action="expand">
                     <i class="fa fa-chevron-down" aria-hidden="true"></i>
                 </button>
-                <button class="contract-media" data-cmid="{{ id }}" data-action="contract">
+                <button class="contract-media action-media" data-cmid="{{ id }}" data-action="contract">
                     <i class="fa fa-chevron-up" aria-hidden="true"></i>
                 </button>
             </div>
