--- a/scss/layout/_flatnav.scss
+++ b/scss/layout/_flatnav.scss
@@ -38,6 +38,17 @@ body[data-theme='cbe'][data-role='user'] {
           .media-left {
             display: none;
           }
+          .media-body {
+            top: 1px;
+          }
+        }
+        &[data-key="sitesettings"] {
+          border-top: 1px solid $grey-border !important;
+          margin-top: 12px;
+          padding-top: 20px !important;
+          .media .media-body {
+            top: -7px;
+          }
         }
       }
       .media {
