add tasks pages logical

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $nav-height: 74px;
 $footer-height: 64px;
 
 $border-input: 10px;
-
+$grey-hight: #717171;
 
 $font: Montserrat, sans-serif;
 $fontbold: Montserrat Bold, sans-serif;
