--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -12,6 +12,7 @@
 @import "components/modtresipuntaudio";
 @import "components/modulecbe";
 @import "components/table";
+@import "components/blocktresipuntmodspend";
 
 @import "layout/navbar";
 @import "layout/flatnav";
