--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -62,3 +62,30 @@ body[data-theme='cbe'][data-role='admin'] {
   width: 32px;
   height: 32px;
 }
+
+/* ScrollBar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: inherit;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $grey-border;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #C2C2C2;
+  width: 6px;
+}
+/* ScrollBar */
