--- a/scss/layout/_flatnav.scss
+++ b/scss/layout/_flatnav.scss
@@ -2,8 +2,9 @@ body[data-theme='cbe'][data-role='user'] {
 
   #nav-drawer {
     nav.list-group {
-      border-bottom: 1px solid #d9d9d9;
-      padding-bottom: 12px;
+      border-bottom: 1px solid $border-color;
+      padding-bottom: 10px;
+      padding-top: 5px;
       .list-group-item-action:hover,
       .list-group-item-action:focus {
         color: $primary-color;
@@ -40,8 +41,9 @@ body[data-theme='cbe'][data-role='user'] {
             display: none;
           }
           .media-body {
-            color: black;
+            color: $black-ligth;
             margin-bottom: 7px;
+            font-weight: 700;
           }
         }
         &[data-parent-key="mycourses"] {
