--- a/templates/components/module_component.mustache
+++ b/templates/components/module_component.mustache
@@ -23,7 +23,7 @@
         <a class="icon" href="{{ view_url }}"></a>
     </div>
     <div class="data">
-        <a class="title" href="{{ view_url }}">{{ name }}</a>
-        <p class="section">{{ sectionname }}</p>
+        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
+        <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
     </div>
 </div>
