--- a/templates/sections/course_left_section_menu_component.mustache
+++ b/templates/sections/course_left_section_menu_component.mustache
@@ -26,6 +26,12 @@
             <span class="text">{{# str }} course_left_participants, theme_cbe {{/ str }}</span>
         </a>
     </li>
+    <li class="link">
+        <a href="{{ links.calendar }}">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <span class="text">{{# str }} course_left_calendar, theme_cbe {{/ str }}</span>
+        </a>
+    </li>
     {{# links.settings }}
     <li class="link">
         <a href="{{ links.settings }}">
