--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -24,6 +24,7 @@
 @import "pages/login";
 @import "pages/dashboard";
 @import "pages/course";
+@import "pages/coursegrades";
 @import "pages/category";
 @import "pages/system";
 @import "pages/index";
