--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -2,6 +2,8 @@ body[data-theme='cbe'][data-role='user'] {
 
   table.generaltable {
 
+    border-bottom: 1px solid #dee2e6;
+
     thead {
       tr {
         background-color: #F6F6F6 !important;
