--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 body[data-theme='cbe'][data-role='user'][data-context="index"] {
 
-  header.index {
+  header.system {
     justify-content: center;
     margin-bottom: 10px;
   }
@@ -10,6 +10,10 @@ body[data-theme='cbe'][data-role='user'][data-context="index"] {
       margin-top: 0;
       margin-left: 15px;
     }
+  }
+
+  #page-content.course #region-main-box {
+    display: inline-block;
   }
 
   #region-main {
